GNOME Bugzilla – Bug 696559
stack-switcher: Disconnect the stack signals when the stack is destroyed
Last modified: 2013-03-25 14:58:12 UTC
Otherwise if the stack is destroyed before the stack-switcher, it causes a segmentation fault. eg., in the following backtrace widget=0x6d0360 is pointing to an invalid memory address. (gdb) bt
+ Trace 231681
Created attachment 239767 [details] [review] stack-switcher: Disconnect the signals when the stack is destroyed
Review of attachment 239767 [details] [review]: Thanks, looks good.
Thanks for the review. Pushed.