stack-switcher: Disconnect the signals when the stack is destroyed

https://bugzilla.gnome.org/show_bug.cgi?id=696559